[gd_scene load_steps=24 format=3 uid="uid://bub0s6h143gti"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_bbye5"]
[ext_resource type="Material" uid="uid://cctp0kf1ckkim" path="res://shaders/liquid.tres" id="2_ciocx"]
[ext_resource type="Script" path="res://scripts/liquid.gd" id="3_cb8t0"]
[ext_resource type="Material" uid="uid://cojed22yo83t" path="res://assets/dogger_override.tres" id="3_ofbya"]
[ext_resource type="PackedScene" uid="uid://gwbi5d331jpl" path="res://assets/dogger.glb" id="4_qb4yx"]
[ext_resource type="Shader" path="res://shaders/outline2.gdshader" id="4_ymgkv"]
[ext_resource type="Script" path="res://scripts/foot_ik_r.gd" id="5_p7uf2"]
[ext_resource type="PackedScene" uid="uid://bxdvr1rgqwih" path="res://scenes/powers/dog.tscn" id="6_nvc0x"]
[ext_resource type="PackedScene" uid="uid://k3w1gr1m3udh" path="res://scenes/powers/ketchup.tscn" id="8_2cw3o"]
[ext_resource type="AudioStream" uid="uid://bxfmx8v620e4j" path="res://audio/oof.wav" id="8_bjarv"]
[ext_resource type="AudioStream" uid="uid://hdw7fm0oi4ly" path="res://audio/death.ogg" id="9_vva03"]
[ext_resource type="AudioStream" uid="uid://b6h7qntb5mi5v" path="res://audio/woosh1.ogg" id="13_ol83l"]
[ext_resource type="AudioStream" uid="uid://co550plnouvtg" path="res://audio/footstep_grass_000.wav" id="13_vufqy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hvabj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rwdy5"]
render_priority = 0
shader = ExtResource("4_ymgkv")
shader_parameter/outline_color = null
shader_parameter/outline_width = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1vpan"]
next_pass = SubResource("ShaderMaterial_rwdy5")
transparency = 1
cull_mode = 2
shading_mode = 0
diffuse_mode = 3
albedo_color = Color(1, 1, 1, 0.25098)
disable_receive_shadows = true

[sub_resource type="PrismMesh" id="PrismMesh_yk2of"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_och7s"]

[sub_resource type="Animation" id="Animation_pjyso"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("skeleton/Skeleton3D/eyes:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gdk4a"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("skeleton/Skeleton3D/eyes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -0.1, 0, 1, 1, 0, 0.1, 0, 2, 1, 0, -0.1, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("skeleton/Skeleton3D/eyes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector3(0, -0.1, 0), Vector3(0, 0.1, 0), Vector3(0, -0.1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5cwl"]
_data = {
"RESET": SubResource("Animation_pjyso"),
"float": SubResource("Animation_gdk4a")
}

[sub_resource type="Gradient" id="Gradient_pi0eh"]
interpolation_mode = 1
colors = PackedColorArray(1, 0, 0.301961, 1, 0.760784, 0.764706, 0.780392, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_peb54"]
gradient = SubResource("Gradient_pi0eh")
width = 92

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 3
script = ExtResource("1_bbye5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03111, 0)
shape = SubResource("CapsuleShape3D_hvabj")

[node name="dogger" parent="." instance=ExtResource("4_qb4yx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="Skeleton3D" parent="dogger/skeleton" index="0"]
bones/1/rotation = Quaternion(-0.0328684, 1.19145e-07, -3.91822e-09, 0.99946)
bones/2/rotation = Quaternion(0.0328684, -1.78287e-14, 7.83644e-09, 0.99946)
bones/5/rotation = Quaternion(0.0230735, -0.0234081, 0.711791, 0.701622)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(4.14013e-08, -1.16498e-07, 0.0102814, 0.999947)
bones/7/rotation = Quaternion(-5.42822e-09, 6.77526e-08, 0.0169524, 0.999856)
bones/8/rotation = Quaternion(0.0230736, 0.0234079, -0.711791, 0.701622)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(4.17107e-08, 1.16503e-07, -0.0102814, 0.999947)
bones/10/rotation = Quaternion(-5.3019e-09, -6.7757e-08, -0.0169524, 0.999856)
bones/11/rotation = Quaternion(0.996971, -0.0777729, 3.82693e-08, -2.44144e-08)
bones/11/scale = Vector3(0.999994, 1, 1)
bones/12/rotation = Quaternion(-1.89914e-08, -5.23227e-09, -0.115616, 0.993294)
bones/13/rotation = Quaternion(-1.29892e-09, -3.41407e-08, 0.0380142, 0.999277)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.996971, 0.0777729, -3.82693e-08, -2.44144e-08)
bones/14/scale = Vector3(0.999994, 1, 1)
bones/15/rotation = Quaternion(-1.89914e-08, 5.23227e-09, 0.115616, 0.993294)
bones/16/rotation = Quaternion(-1.29892e-09, 3.41407e-08, -0.0380142, 0.999277)
bones/16/scale = Vector3(1, 1, 1)

[node name="body" parent="dogger/skeleton/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("3_ofbya")

[node name="tank" parent="dogger/skeleton/Skeleton3D" index="3"]
surface_material_override/0 = SubResource("StandardMaterial3D_1vpan")
surface_material_override/1 = ExtResource("2_ciocx")
script = ExtResource("3_cb8t0")

[node name="foot_ik_r" type="SkeletonIK3D" parent="dogger/skeleton/Skeleton3D" index="4"]
process_priority = 1
root_bone = &"thigh.r"
tip_bone = &"foot.r"
override_tip_basis = false
use_magnet = true
magnet = Vector3(4, 4, -8)
target_node = NodePath("../../foot_target_r")
max_iterations = 3
script = ExtResource("5_p7uf2")

[node name="foot_ik_l" type="SkeletonIK3D" parent="dogger/skeleton/Skeleton3D" index="5"]
process_priority = 1
root_bone = &"thigh.l"
tip_bone = &"foot.l"
override_tip_basis = false
use_magnet = true
magnet = Vector3(4, 4, 8)
target_node = NodePath("../../foot_target_l")
max_iterations = 3
script = ExtResource("5_p7uf2")

[node name="hand_ik_r" type="SkeletonIK3D" parent="dogger/skeleton/Skeleton3D" index="6"]
process_priority = 1
root_bone = &"shoulder.r"
tip_bone = &"hand.r"
interpolation = 0.4
override_tip_basis = false
use_magnet = true
target_node = NodePath("../../hand_target_r")
max_iterations = 3
script = ExtResource("5_p7uf2")

[node name="hand_ik_l" type="SkeletonIK3D" parent="dogger/skeleton/Skeleton3D" index="7"]
process_priority = 1
root_bone = &"shoulder.l"
tip_bone = &"hand.l"
interpolation = 0.4
override_tip_basis = false
use_magnet = true
target_node = NodePath("../../hand_target_r")
max_iterations = 3
script = ExtResource("5_p7uf2")

[node name="head_ik" type="SkeletonIK3D" parent="dogger/skeleton/Skeleton3D" index="8"]
process_priority = 1
root_bone = &"root"
tip_bone = &"top"
interpolation = 0.02
override_tip_basis = false
use_magnet = true
target_node = NodePath("../../hand_target_r")
max_iterations = 3
script = ExtResource("5_p7uf2")

[node name="foot_target_r" type="Marker3D" parent="dogger/skeleton" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.166259, 0, 0.100209)
top_level = true
gizmo_extents = 3.04

[node name="foot_target_l" type="Marker3D" parent="dogger/skeleton" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14281, 0, -0.13082)
top_level = true

[node name="hand_target_r" type="Node3D" parent="dogger/skeleton" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23734, -8.43802)

[node name="direction" type="MeshInstance3D" parent="dogger"]
visible = false
mesh = SubResource("PrismMesh_yk2of")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_och7s")

[node name="eye_float" type="AnimationPlayer" parent="dogger"]
libraries = {
"": SubResource("AnimationLibrary_e5cwl")
}
autoplay = "float"

[node name="powers" type="Node3D" parent="."]

[node name="dog" parent="powers" instance=ExtResource("6_nvc0x")]
transform = Transform3D(0.106832, 0, 0.994277, 0, 1, 0, -0.994277, 0, 0.106832, 0, 0, 0)

[node name="ketchup" parent="powers" instance=ExtResource("8_2cw3o")]

[node name="dash_timer" type="Timer" parent="powers"]
wait_time = 0.2

[node name="dash_invinc" type="Timer" parent="powers/dash_timer"]
wait_time = 0.3

[node name="dash_timeout" type="Timer" parent="powers/dash_timer"]
wait_time = 3.0

[node name="hp_bar" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 16, 0, 0, 0, 1, 0, -0.3, 0)
billboard = 1
transparent = false
no_depth_test = true
texture_filter = 0
render_priority = -1
texture = SubResource("GradientTexture1D_peb54")

[node name="oof" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bjarv")
volume_db = -9.0

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vva03")
volume_db = -9.0

[node name="footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_vufqy")
max_polyphony = 4

[node name="woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ol83l")
volume_db = -6.0

[connection signal="timeout" from="powers/dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="powers/dash_timer/dash_invinc" to="." method="_on_dash_invinc_timeout"]
[connection signal="timeout" from="powers/dash_timer/dash_timeout" to="." method="_on_dash_timeout_timeout"]

[editable path="dogger"]
